--- a/apps/builder/src/i18n/locale/pl-PL.json
+++ b/apps/builder/src/i18n/locale/pl-PL.json
@@ -76,7 +76,8 @@
       "fork-suc": "Pomyślnie rozwidlono.",
       "delete-failed": "Usunięcie nie powiodło się. Spróbuj ponownie. ",
       "delete-suc": "Usunięto pomyślnie. ",
-      "mobile-fork-suc": "Pomyślnie sforkowano. Proszę edytować na pulpicie."
+      "mobile-fork-suc": "Pomyślnie sforkowano. Proszę edytować na pulpicie.",
+      "save_resource": "Save successful, the page will be closing in 3 seconds..."
     },
     "create": "Utwórz"
   },
@@ -4387,7 +4388,14 @@
     "before": "Załaduj więcej"
   },
   "size_exceed_copied_tips": "Zawartość jest zbyt długa do skopiowania. (aktualny rozmiar: {{current_size}} bajtów, limit: {{limit_size}} bajtów)",
-  "contribute": "Wesprzyj",
+  "contribute": {
+    "tag": {
+      "recommended": "Recommended",
+      "add_tag": "Add tags",
+      "tag": "Tag",
+      "failed_to_save": "Failed to save"
+    }
+  },
   "error_page": {
     "fobidden": "Brak uprawnień dostępu"
   }
