--- a/apps/cloud/public/locales/el-GR.json
+++ b/apps/cloud/public/locales/el-GR.json
@@ -944,7 +944,8 @@
       "current-user": "Εσείς"
     },
     "settings": {
-      "allow_editors_invite": "Επιτρέψτε στους συντάκτες και τους θεατές να διαχειρίζονται μέλη"
+      "allow_editors_invite": "Επιτρέψτε στους συντάκτες και τους θεατές να διαχειρίζονται μέλη",
+      "allow_register": "Επιτρέψτε στους χρήστες να εγγραφούν μέσω συνδέσμου"
     }
   },
   "homepage": {
@@ -4290,7 +4291,7 @@
     },
     "desc": {
       "no_description": "Χωρίς περιγραφή",
-      "blank": "Καμία εφαρμογή",
+      "blank": "Δεν υπάρχουν στοιχεία",
       "blank-agent": "Κανένας πράκτορας τεχνητής νοημοσύνης εδώ"
     },
     "app_setting": {
@@ -4351,6 +4352,16 @@
       "add_tag": "Προσθήκη ετικετών",
       "tag": "Ετικέτα",
       "failed_to_save": "Αποτυχία αποθήκευσης"
+    },
+    "first_time_modal": {
+      "title": "Συνεισφέρετε στην κοινότητα",
+      "button": "Συνεισφέρετε"
+    },
+    "update": "Επεξεργασία ετικετών",
+    "copy_link": "Αντιγραφή συνδέσμου",
+    "update_modal": {
+      "button": "Ενημέρωση",
+      "title": "Επεξεργασία"
     }
   },
   "tutorial": {
