--- a/apps/cloud/public/locales/ru-RU.json
+++ b/apps/cloud/public/locales/ru-RU.json
@@ -944,7 +944,8 @@
       "current-user": "Вы"
     },
     "settings": {
-      "allow_editors_invite": "Разрешить редакторам и зрителям управлять участниками"
+      "allow_editors_invite": "Разрешить редакторам и зрителям управлять участниками",
+      "allow_register": "Разрешить пользователям регистрироваться по ссылке"
     }
   },
   "homepage": {
@@ -4290,7 +4291,7 @@
     },
     "desc": {
       "no_description": "Нет описания",
-      "blank": "Нет приложения",
+      "blank": "Нет элементов",
       "blank-agent": "Агент ИИ здесь нет"
     },
     "app_setting": {
@@ -4351,6 +4352,16 @@
       "add_tag": "Добавить теги",
       "tag": "Тег",
       "failed_to_save": "Не удалось сохранить"
+    },
+    "first_time_modal": {
+      "title": "Внести свой вклад в сообщество",
+      "button": "Внести вклад"
+    },
+    "update": "Изменить теги",
+    "copy_link": "Копировать ссылку",
+    "update_modal": {
+      "button": "Обновить",
+      "title": "Редактирование"
     }
   },
   "tutorial": {
