--- a/apps/cloud/public/locales/cs-CZ.json
+++ b/apps/cloud/public/locales/cs-CZ.json
@@ -4291,7 +4291,7 @@
     },
     "desc": {
       "no_description": "Bez popisu",
-      "blank": "Žádná aplikace",
+      "blank": "Žádné položky",
       "blank-agent": "Žádný AI agent zde"
     },
     "app_setting": {
@@ -4352,6 +4352,16 @@
       "add_tag": "Přidat štítky",
       "tag": "Značka",
       "failed_to_save": "Uložení se nezdařilo"
+    },
+    "first_time_modal": {
+      "title": "Přispět do komunity",
+      "button": "Přispějte"
+    },
+    "update": "Upravit štítky",
+    "copy_link": "Kopírovat odkaz",
+    "update_modal": {
+      "button": "Aktualizovat",
+      "title": "Upravit"
     }
   },
   "tutorial": {
