--- a/apps/cloud/public/locales/da-DK.json
+++ b/apps/cloud/public/locales/da-DK.json
@@ -945,7 +945,7 @@
     },
     "settings": {
       "allow_editors_invite": "Tillad editorer og seere at administrere medlemmer",
-      "allow_register": "Tillad brugere at registrere via link"
+      "allow_register": "Allow users to register via link"
     }
   },
   "homepage": {
@@ -4291,7 +4291,7 @@
     },
     "desc": {
       "no_description": "No description",
-      "blank": "No application",
+      "blank": "No items",
       "blank-agent": "No AI Agent here"
     },
     "app_setting": {
@@ -4352,6 +4352,16 @@
       "add_tag": "Add tags",
       "tag": "Tag",
       "failed_to_save": "Failed to save"
+    },
+    "first_time_modal": {
+      "title": "Contribute to community",
+      "button": "Contribute"
+    },
+    "update": "Edit tags",
+    "copy_link": "Copy link",
+    "update_modal": {
+      "button": "Update",
+      "title": "Edit"
     }
   },
   "tutorial": {
