--- a/apps/cloud/public/locales/no-NO.json
+++ b/apps/cloud/public/locales/no-NO.json
@@ -944,7 +944,8 @@
       "current-user": "Du"
     },
     "settings": {
-      "allow_editors_invite": "Tillat redaktører og seere å administrere medlemmer"
+      "allow_editors_invite": "Tillat redaktører og seere å administrere medlemmer",
+      "allow_register": "Tillat brukere å registrere seg via lenke"
     }
   },
   "homepage": {
@@ -4290,7 +4291,7 @@
     },
     "desc": {
       "no_description": "Ingen beskrivelse",
-      "blank": "Ingen programmer",
+      "blank": "Ingen elementer",
       "blank-agent": "Ingen AI-Agent her"
     },
     "app_setting": {
@@ -4351,6 +4352,16 @@
       "add_tag": "Legg til tagger",
       "tag": "Tagg",
       "failed_to_save": "Kunne ikke lagre"
+    },
+    "first_time_modal": {
+      "title": "Bidra til samfunnet",
+      "button": "Bidra"
+    },
+    "update": "Rediger tagger",
+    "copy_link": "Kopier lenke",
+    "update_modal": {
+      "button": "Oppdater",
+      "title": "Rediger"
     }
   },
   "tutorial": {
