--- a/apps/cloud/public/locales/el-GR.json
+++ b/apps/cloud/public/locales/el-GR.json
@@ -873,7 +873,7 @@
         "invite_title": "Πρόσκληση μέσω email",
         "invite": "Πρόσκληση",
         "placeholder": "Εισάγετε διεύθυνση email",
-        "invited": "Έχουν προσκληθεί",
+        "invited": "Αυτός ο χρήστης είναι ήδη στην ομάδα σας.",
         "in_list": "Αυτός ο χρήστης είναι ήδη στην ομάδα σας.",
         "duplicate": "{{ email }} είναι διπλότυπη",
         "notmail": "{{ email }} δεν είναι email",
@@ -887,7 +887,8 @@
       },
       "tab": {
         "invite": "Πρόσκληση",
-        "public": "Δημόσιο"
+        "public": "Δημόσιο",
+        "with_team": "Μοιραστείτε με την ομάδα"
       },
       "custom_copy_text": "{{userName}} σας προσκαλεί να συμμετάσχετε στο 「{{teamName}}」. Κάντε κλικ στο σύνδεσμο για να συμμετάσχετε στην ομάδα: {{inviteLink}}",
       "custom_copy_text_app_invite": "{{userName}} σας κοινοποίησε μια εφαρμογή 「{{teamName}}」. Κάντε κλικ στο σύνδεσμο για να συμμετάσχετε στην ομάδα και ελέγξτε την APP: {{inviteLink}}",
@@ -901,11 +902,20 @@
         "app": {
           "desc": "Αφού συνεισφέρετε την εφαρμογή σας στην κοινότητα, άλλοι χρήστες μπορούν να δουν τη διεπαφή της, να εκτελέσει τις ενέργειές της και να την πιρουνίσει. Όταν διχάζετε μια εφαρμογή, οι πληροφορίες διαμόρφωσης πόρων δεν περιλαμβάνονται, οπότε δεν χρειάζεται να ανησυχείτε για την αποκάλυψη πληροφοριών διαμόρφωσης πόρων."
         },
-        "desc": "Αφού συνεισφέρουν στην κοινότητα, όλοι οι χρήστες μπορούν να τρέξουν, να αστερίσουν και να διεισδύσουν τον πράκτορά σας. Όταν οι χρήστες από άλλες ομάδες τρέχουν αυτόν τον Agent, δεν θα καταναλώνουν τους πόρους σας."
+        "desc": "Αφού συνεισφέρουν στην κοινότητα, όλοι οι χρήστες μπορούν να τρέξουν, να αστερίσουν και να διεισδύσουν τον πράκτορά σας. Όταν οι χρήστες από άλλες ομάδες τρέχουν αυτόν τον Agent, δεν θα καταναλώνουν τους πόρους σας.",
+        "default_text": {
+          "agent": "Μόλις ανακάλυψα ένα εντυπωσιακό AI Agent που ονομάζεται {{ agentName }}. Ελέγξτε το: {{ agentLink }}",
+          "app": "Μόλις ανακάλυψα μια εντυπωσιακή εφαρμογή που ονομάζεται {{ appName }}. Ελέγξτε το: {{ appLink }}"
+        }
       },
       "social_media": {
-        "label": "Μοιραστείτε στα κοινωνικά δίκτυα"
-      }
+        "label": "Μοιραστείτε στα κοινωνικά δίκτυα",
+        "default_text": {
+          "agent": "I just discovered an impressive AI Agent called {{ agentName }}",
+          "app": "I just discovered an impressive app called {{ appName }}"
+        }
+      },
+      "custom_copy_text_agent_invite": "{{ userName }} μοιραστείτε έναν πράκτορα τεχνητής νοημοσύνης από το \"{{ teamName }}\". Γίνετε μέλος της ομάδας και ελέγξτε το: {{ inviteLink }}"
     },
     "mes": {
       "invite_suc": "Επιτυχής πρόσκληση",
@@ -4213,7 +4223,7 @@
   },
   "dashboard": {
     "app_market": "Πρότυπα",
-    "market": "Αγορά",
+    "market": "Δημιουργία από πρότυπο",
     "app": {
       "all_apps": "Όλες Οι Εφαρμογές",
       "create_app": "Δημιουργία Εφαρμογής",
@@ -4375,5 +4385,8 @@
         }
       }
     }
+  },
+  "dayjs": {
+    "just_now": "Μόλις τώρα"
   }
 }
