--- a/apps/cloud/public/locales/fr-FR.json
+++ b/apps/cloud/public/locales/fr-FR.json
@@ -873,7 +873,7 @@
         "invite_title": "Inviter par e-mail",
         "invite": "Inviter",
         "placeholder": "Entrez votre adresse e-mail",
-        "invited": "Ont invité",
+        "invited": "This user is already on your team.",
         "in_list": "Cet utilisateur est déjà dans votre équipe.",
         "duplicate": "{{ email }} est dupliqué",
         "notmail": "{{ email }} n'est pas un email",
@@ -887,7 +887,8 @@
       },
       "tab": {
         "invite": "Inviter",
-        "public": "Publique"
+        "public": "Publique",
+        "with_team": "Share with team"
       },
       "custom_copy_text": "{{userName}} vous invite à rejoindre 「{{teamName}}」. Cliquez sur le lien pour rejoindre l'équipe: {{inviteLink}}",
       "custom_copy_text_app_invite": "{{userName}} vous a partagé une application de 「{{teamName}}」. Cliquez sur le lien pour rejoindre l'équipe et vérifier l'APP: {{inviteLink}}",
@@ -901,11 +902,20 @@
         "app": {
           "desc": "After contributing your app to the community, other users can view its interface, run its actions, and fork it. When forking an app, the resource configuration information is not included, so there is no need to worry about the disclosure of resource configuration information."
         },
-        "desc": "After contributing to the community, all users can run, star, and fork your Agent. When users from other teams run this Agent, it will not consume your resources."
+        "desc": "After contributing to the community, all users can run, star, and fork your Agent. When users from other teams run this Agent, it will not consume your resources.",
+        "default_text": {
+          "agent": "I just discovered an impressive AI Agent called {{ agentName }}. Check it: {{ agentLink }}",
+          "app": "I just discovered an impressive app called {{ appName }}. Check it: {{ appLink }}"
+        }
       },
       "social_media": {
-        "label": "Share on social media"
-      }
+        "label": "Share on social media",
+        "default_text": {
+          "agent": "I just discovered an impressive AI Agent called {{ agentName }}",
+          "app": "I just discovered an impressive app called {{ appName }}"
+        }
+      },
+      "custom_copy_text_agent_invite": "{{ userName }} share you an AI Agent from 「{{ teamName }}」. Join team and check it: {{ inviteLink }}"
     },
     "mes": {
       "invite_suc": "Invité avec succès",
@@ -4213,7 +4223,7 @@
   },
   "dashboard": {
     "app_market": "Modèles",
-    "market": "Place de marché",
+    "market": "Create from template",
     "app": {
       "all_apps": "All Apps",
       "create_app": "Create App",
@@ -4375,5 +4385,8 @@
         }
       }
     }
+  },
+  "dayjs": {
+    "just_now": "Just now"
   }
 }
