--- a/apps/cloud/public/locales/el-GR.json
+++ b/apps/cloud/public/locales/el-GR.json
@@ -4292,7 +4292,8 @@
       "delete-suc": "Διαγράφηκε με επιτυχία. ",
       "mobile-fork-suc": "Επιτυχής επεξεργασία. Παρακαλώ επεξεργαστείτε στην επιφάνεια εργασίας."
     },
-    "create": "Δημιουργία"
+    "create": "Δημιουργία",
+    "market_view": "Κοινότητα"
   },
   "new_dashboard": {
     "status": {
