--- a/apps/cloud/public/locales/ru-RU.json
+++ b/apps/cloud/public/locales/ru-RU.json
@@ -4292,7 +4292,8 @@
       "delete-suc": "Успешно удалено. ",
       "mobile-fork-suc": "Успешно сформировано. Пожалуйста, отредактируйте на рабочем столе."
     },
-    "create": "Создать"
+    "create": "Создать",
+    "market_view": "Сообщество"
   },
   "new_dashboard": {
     "status": {
